src/components/Maps/style.module.less
@import '../style/vars.less';

:global {
  .mapboxgl-map {
    overflow: visible !important;
    z-index: 2;
  }

  .mapboxgl-canvas-container {
    overflow: hidden;
    position: relative;
  }

  .mapboxgl-canvas {
    position: relative !important;
  }

  .mapboxgl-ctrl-geocoder {
    color: @violet !important;
    border: 2px solid @violet;
    font-family: inherit !important;
    border-radius: 25px !important;

    @media (max-width: @breakPointM) {
      width: 70% !important;
    }

    .mapboxgl-ctrl-geocoder--icon-search {
      width: 25px !important;
      height: 25px !important;
      fill: @violet !important;

      // Specific breakpoint of mapbox stylesheet
      @media (min-width: 640px) {
        top: 6px !important;
      }

      @media (max-width: 640px) {
        top: 13px !important;
      }
    }

    .mapboxgl-ctrl-geocoder--input {
      color: @violet !important;

      &::placeholder {
        color: @greyMedium !important;
      }

      &:focus {
        @media (min-width: @breakPointM) {
          top: 13px !important;
          border-radius: 25px !important;
          outline: none;
          box-shadow: inset 0 0 0 @borderWidthThick @violet;
        }
      }
    }
  }

  .mapboxgl-popup-close-button {
    margin: 0.5rem;
    color: @violet;
    background: #f0f0f0;
    position: fixed !important;
    top: 1rem !important;
    right: -8.75rem !important;

    &:hover {
      color: @violetLight;
    }
  }

  .mapboxgl-popup-content {
    overflow: auto;
    border: 1px solid @violet;
    border-radius: 2px !important;
    width: 25rem;
    max-height: 25rem;

    @media (max-width: @breakPointM) {
      width: 20rem;
    }
  }

  .mapboxgl-ctrl-bottom-right {
    z-index: 0 !important;
  }
}

// Needed for overflowing popup if there is two maps (e.g. in Bremen)
.mapSection {
  position: relative;
  z-index: 1;
}

.container {
  height: 40rem;
  max-height: 60vh;
  color: @violet;
}

.tooltip {
  padding: 1.5rem;
  color: @black;
  font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
  font-size: @DesktopFontSizeS;

  hr {
    border: 0;
    background: currentColor;
    height: 1px;
  }
}

.tooltipDescription {
  p {
    margin: 0.2em 0;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.tooltipTitle {
  font-weight: bold;
  font-size: @DesktopFontSizeM;
  margin-bottom: 1rem;
  margin-top: 0;
  color: @violet;
}

.tooltipHeading {
  color: @violet;
  font-size: @DesktopFontSizeS;
  font-weight: normal;
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.tooltipTimeAndPlace {
  display: flex;
  font-size: @DesktopFontSizeXS;
}

.tooltipInfoWithIcon {
  width: 50%;
  display: flex;
  align-items: center;
}

.tooltipIcon {
  height: 1.6rem;
}

.tooltipDate,
.tooltipLocation {
  margin-left: 0.5rem;
}

.tooltipDay,
.tooltipAddress {
  font-weight: bold;
}

.tooltipTime,
.tooltipZipCode {
  opacity: 0.5;
}

.popUpOutside {
  @media (min-width: @breakPointS) {
    display: none;
  }
}

.marker {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
  top: -25px !important;

  &.collect {
    background-image: url('marker-collect.png');
    width: 60px;
    height: 60px;
  }

  &.sign {
    background-image: url('marker-sign.png');
    width: 60px;
    height: 60px;
  }
}

.eventContainer {
  display: flex;
  flex-wrap: wrap;
}

.eventDay {
  flex: 50%;
  min-width: 50%;
  max-width: 50%;

  @media (max-width: @breakPointL) {
    flex: 100%;
    min-width: 100%;
    max-width: 100%;
  }
}

.moduleHeading {
  margin-top: 6rem;
  margin-bottom: 4rem;
  color: @violet;
  font-size: @DesktopFontSizeXL;

  @media (max-width: @breakPointM) {
    font-size: @DesktopFontSizeL;
  }
}

.descriptionHeading {
  margin: 0;
  color: @violet;
  font-size: 2.25rem;

  @media (max-width: @breakPointM) {
    font-size: @DesktopFontSizeM;
  }
}

.eventDescription {
  margin-top: 1rem;
  margin-bottom: 3rem;
  padding-right: 1rem;
  font-size: 1.5rem;

  @media (max-width: @breakPointM) {
    font-size: 1rem;
    padding-right: 0rem;
  }
}

.descriptionText {
  margin: 0;
  font-size: 1.5rem;

  @media (max-width: @breakPointM) {
    font-size: 1rem;
  }
}

.filter {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 4rem;

  @media (max-width: @breakPointL) {
    height: 7rem;
  }

  @media (max-width: @breakPointS) {
    height: auto;
  }
}

.flexRow {
  display: flex;
  flex-direction: row;
  height: 2rem;

  @media (max-width: @breakPointS) {
    height: auto;
    flex-direction: column;
  }
}

.inlineCheckbox {
  margin-right: 1.5rem;

  @media (max-width: @breakPointS) {
    margin-bottom: 1rem;
  }
}

.inlineCheckboxLabel {
  margin-top: 0;
}

.dropdown {
  margin-right: 1.5rem;
}

.dropdownButton {
  margin-top: -0.3rem;

  @media (max-width: @breakPointL) {
    min-width: 13rem;
  }

  @media (max-width: @breakPointS) {
    margin-bottom: 1rem;
    margin-top: 0;
  }
}

.dropdownContent {
  background-color: white;
  position: relative;
  z-index: 9;
  padding: 0.5rem;
  margin-bottom: 0;

  @media (max-width: @breakPointS) {
    margin-bottom: 1rem;
  }
}

.legend {
  display: flex;
  justify-content: end;
  flex-wrap: wrap;

  @media (max-width: @breakPointXS) {
    justify-content: start;
  }

  img {
    position: relative;
    top: 0.8rem;
    height: 2.5rem;
  }
}

.jumpToAnchorWrapper {
  position: relative;
}

.jumpToAnchor {
  position: absolute;
  top: calc(-@headerHeight - 2rem);
}

